<resources>
    <string name="app_name">Melhore Seu Ministerio</string>
    <string name="action_settings">Settings</string>

    <string name="tema1">Beneficie-se da</string>
    <string name="tema2">Escola do Ministério</string>
    <string name="tema3">Teocrático</string>

    <string name="minutos">Minutos </string>
    <string name="segundos">Segundos</string>

    <string name="sala">Sala\u0020</string>

    <string name="lbNome">Nome:</string>
    <string name="lbSenha">Senha:</string>
    <string name="lbCong">Congr.:</string>
    <string name="lbEstudante">Estudante:</string>
    <string name="lbAjudante">Ajudante:</string>
    <string name="lbTema">Tema:</string>
    <string name="lbFonte">Fonte:</string>
    <string name="lbAvaliacao">Avaliação:</string>
    <string name="lbTempoDef">Tempo Definido:</string>
    <string name="lbTempoCorrido">Tempo Corrido:</string>
    <string name="lbEstudo">Estudo:</string>
    <string name="lb">:</string>


    <string name="btnOK">OK</string>

    <string name="tempo_df_leitura">4:03</string>
    <string name="tempo_df_visita">2:03</string>
    <string name="tempo_df_revisita">4:03</string>
    <string name="tempo_df_estudo">6:03</string>

    <!-- imgDescription -->
    <string name="img_icone">icone</string>
    <string name="img_line">linha</string>
    <!-- imgDescription fim -->

    <string-array name="tipo_avaliacao">
        <item>Não Avaliado</item>
        <item>Aprovado</item>
        <item>Substituição</item>
        <item>Reprovado</item>
    </string-array>

    <!--Preferences-->
    <string name="title_activity_preferencias">Preferências</string>

    <string name="divConf">Configuração</string>
    <string name="divSobre">Sobre</string>
    <string name="divSinc">Sincronismo</string>

    <string name="opTempo">Definir Tempo</string>
    <string name="opAlarme">Definir Alarme</string>
    <string name="opCong">Número da Congregação</string>
    <string name="opEmail">E-mail ao desenvolvedor</string>
    <string name="opVersao">Versão do Programa</string>
    <string name="opSincIni">Sincronismo ao iniciar?</string>
    <string name="opSincAuto">Sincronismo automático?</string>
    <string name="opInterSinc">Intervalo de minutos</string>

    <string name="subOpLeitura">Leitura</string>
    <string name="subOpVisita">Visita</string>
    <string name="subOpRevisita">Revisita</string>
    <string name="subOpEstudo">Estudo</string>

    <string name="subOpPerSom">Usar som personalizado?</string>
    <string name="subOpSom">Som</string>

    <string name="sumaryVersao">1.00</string>
    <!--Preferences fim-->
</resources>